# Category-Theory-Functional-Programming

./: .gitignore  CMakeLists.txt  README.md  compile.sh  run.sh
Algebraic_Types/: Algebraic_Types.cpp  Algebraic_Types.hs  Algebraic_Types.md  CMakeLists.txt
C++/: Identity_Composition.cpp
Categories/: CMakeLists.txt  Categories.cpp  Categories.hs  Categories.md
DP_Graph/: CMakeLists.txt  DP_Graph.cpp  DP_Graph.hs
Fixed_Points_Recursion/: Fixed_Points_Recursion.hs  Lawvere.hs
Function_Types/: Function_Types.hs
Functoriality/: CMakeLists.txt  Functoriality.cpp  Functoriality.hs
Functors/: CMakeLists.txt  Functors.cpp  Functors.hs  Functors.md
Haskell/: Identity_Composition.hs
Identity_Composition/: CMakeLists.txt  Identity_Composition.hs  Identity_Composition.md  compile.sh  run.sh
Kleisli_Embellishments/: CMakeLists.txt  Kleisli_Embellishments.cpp  Kleisli_Embellishments.hs
Miscellaneous/: Typed_Matrices.cpp  Typed_Matrices.hs
Natural_Transformations/: Natural_Transformations.hs
Products_Coproducts/: CMakeLists.txt  Product_Coproducts.md  Products_Coproducts.cpp  Products_Coproducts.hs  Products_Coproducts.md
Typed_Matrices/: CMakeLists.txt  Typed_Matrices.cpp
Types_Functions/: CMakeLists.txt  Types_Functions.cpp  Types_Functions.hs  Types_Functions.md  compile.sh  run.sh
